# sqerzo

./: CONSTRIBUTING.rst  MANIFEST.in  NOTICE  README.md  TODO.md  VERSION  requirements.txt  setup.cfg  setup.py
.github/workflows/: upload-pypi.yml
examples/: docker-compose.yml  email_graph.py  email_graph_transaction.py  fetch_many.py  find_connections.py  find_nodes.py  generate_mail_db.py  get_and_recover_nodes.py  mail.db  simple.py  user_meet.py  user_meet_and_works.py  user_meet_transaction.py
images/: logo.pxm  sqerzo-logo-social.pxm
sqerzo/: __init__.py  __sqerzo__.py  config.py  exceptions.py  helpers.py  model.py  sqerzo.py
sqerzo/cache/: memory.py
sqerzo/graph/: __init__.py  gremlin.py  helpers.py  interfaces.py  lang.py  model.py  neo4j.py  query.py  redisgraph.py  shared.py  transaction.py
sqerzo/graph/cypher/: interfaces.py  lang.py  model.py  neo4j.py  redisgraph.py  transaction.py
sqerzo/graph/gremlin/: gremlin.py
