[metadata]
name = sqerzo
description = Tiny ORM for graph databases
version = file: VERSION
long_description = file: README.md TODO.md
license = License :: OSI Approved :: BSD License
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3.8
authors = cr0hn
authors_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/sqerzo

[options]
zip_safe = True
include_package_data = True
packages = find:

