[metadata]
name = sqerzo
description = Tiny ORM for graph databases
version = file: VERSION
long_description = file: README.md
license = License :: OSI Approved :: Apache Software License
classifiers =
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3.8
authors = BBVA Security Team
authors_email = cr0hn@cr0hn.com
url = https://github.com/BBVA/sqerzo

[options]
zip_safe = True
include_package_data = True
packages = find:

